<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:inputType="textCapWords"/>

    <TextView
        android:layout_below="@+id/input"
        android:id="@+id/toppings"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"/>

    <CheckBox
        android:id="@+id/whipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toppings"
        android:layout_marginBottom="16dp"
        android:text="@string/whipped_cream"
        android:paddingLeft="24dp"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/chocolate"
        android:layout_below="@id/whipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/chocolate"
        android:paddingLeft="24dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_below="@+id/chocolate"
        android:text="@string/quantity"
        style="@style/HeaderTextStyle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/quantity_text_view"
            android:text="-"
            android:onClick="decrement"
            android:layout_marginRight="8dp"/>


    <TextView
        android:id="@+id/quantity_text_view"
        android:text="@string/initial_quantity_value"
        android:layout_below="@+id/increment"
        android:textColor="#000000"
        style="@style/HeaderTextStyle" />

        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/textView"
            android:text="+"
            android:onClick="increment"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:text="@string/order"
        android:textAllCaps="true"
        android:onClick="submitOrder"/>

</RelativeLayout>
</ScrollView>